--- a/client/package.json
+++ b/client/package.json
@@ -17,11 +17,11 @@
     "react-icons": "^4.11.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
-    "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0",
     "swiper": "^11.0.5"
   },
   "devDependencies": {
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react-swc": "^3.3.2",
